--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <div class="contenedor">
         <div class="nave">
             <ul>
-                <li><a href="#"><span class="icon"><ion-icon name="home-sharp"></ion-icon></span><span class="text">Inicio</span></a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="man-sharp"></ion-icon></span><span class="text">Quien soy</span></a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="camera-sharp"></ion-icon></span><span class="text">Fotos</span></a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="settings-sharp"></ion-icon></span><span class="text">Opciones</span></a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="at-sharp"></ion-icon></span><span class="text">Contacto</span></a></li>
+                <li class="list active"><a href="#"><span class="icon"><ion-icon name="home-sharp"></ion-icon></span><span class="text">Inicio</span></a></li>
+                <li class="list"><a href="#"><span class="icon"><ion-icon name="man-sharp"></ion-icon></span><span class="text">Quien soy</span></a></li>
+                <li class="list"><a href="#"><span class="icon"><ion-icon name="camera-sharp"></ion-icon></span><span class="text">Fotos</span></a></li>
+                <li class="list"><a href="#"><span class="icon"><ion-icon name="settings-sharp"></ion-icon></span><span class="text">Opciones</span></a></li>
+                <li class="list"><a href="#"><span class="icon"><ion-icon name="at-sharp"></ion-icon></span><span class="text">Contacto</span></a></li>
+                <div class="indicador"></div>
             </ul>
         </div>
     </div>
